WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182304
WKWebView layout is sometimes wrong after rotation on iPhone X
https://bugs.webkit.org/show_bug.cgi?id=182304
Summary
WKWebView layout is sometimes wrong after rotation on iPhone X
Tim Horton
Reported
2018-01-30 13:25:26 PST
WKWebView layout is sometimes wrong after rotation on iPhone X
Attachments
Patch
(4.52 KB, patch)
2018-01-30 13:25 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(4.47 KB, patch)
2018-01-30 15:12 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(4.93 KB, patch)
2018-01-30 15:43 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-01-30 13:25:43 PST
Created
attachment 332692
[details]
Patch
Alex Christensen
Comment 2
2018-01-30 14:16:28 PST
Comment on
attachment 332692
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=332692&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:2472 > + // return UIEdgeInsetsAdd([_scrollView _contentScrollInset], self.safeAreaInsets, [_scrollView _edgesApplyingSafeAreaInsetsToContentInset]);
Did you mean to leave this commented out?
Tim Horton
Comment 3
2018-01-30 14:39:23 PST
Heh, no, this was from futzing with testing. I’ll fix it, thanks!
Tim Horton
Comment 4
2018-01-30 15:12:18 PST
Created
attachment 332713
[details]
Patch
Tim Horton
Comment 5
2018-01-30 15:12:40 PST
rdar://problem/34158671
Tim Horton
Comment 6
2018-01-30 15:43:02 PST
Created
attachment 332715
[details]
Patch
WebKit Commit Bot
Comment 7
2018-01-30 19:03:04 PST
Comment on
attachment 332715
[details]
Patch Clearing flags on attachment: 332715 Committed
r227869
: <
https://trac.webkit.org/changeset/227869
>
WebKit Commit Bot
Comment 8
2018-01-30 19:03:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug